--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    @apply bg-neutral-800 text-white    
+html {
+    scrollbar-gutter: stable;
+}
+
+body {    
+    @apply bg-neutral-800 text-white        
 }
